[package]
name = "digest"
version = "0.1.0"
authors = ["John Children <john.children@cambridgequantum.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
sha2 = "0.9"
generic-array = "0.14"
streaming-iterator = "0.1"
